2015-04-22  Matt Baker  <mattbaker@apple.com>

        Web Inspector: clicking Timelines tree view nodes should not change the current content view
        https://bugs.webkit.org/show_bug.cgi?id=132202

        Reviewed by Brian Burg.

        TimelineSidebarPanel now prevents timeline views from switching to another content view while the content
        browser is showing the TimelineRecordingContentView. Code responsible for creating and updating the tree
        element close button, which was duplicated in multiple derived TimelineView classes, has been moved to the
        TimelineView base class.

        * UserInterface/Views/LayoutTimelineView.js:
        Updated name of location column, which was broken in a recent patch.
        (WebInspector.LayoutTimelineView.prototype.treeElementDeselected):
        (WebInspector.LayoutTimelineView.prototype.treeElementSelected):
        Added overrides of new base class methods to handle view-specific highlight logic.
        (WebInspector.LayoutTimelineView.prototype._treeElementDeselected): Deleted.
        (WebInspector.LayoutTimelineView.prototype._treeElementSelected): Deleted.
        (WebInspector.LayoutTimelineView.prototype._updateTreeElementWithCloseButton): Deleted.
        (WebInspector.LayoutTimelineView.prototype._closeStatusButtonClicked): Deleted.
        Removed tree element close button logic.

        * UserInterface/Views/NetworkTimelineView.js:
        (WebInspector.NetworkTimelineView.prototype.showContentViewForTreeElement):
        (WebInspector.NetworkTimelineView.prototype.treeElementSelected):
        Added overrides of new base class methods.
        (WebInspector.NetworkTimelineView.prototype._treeElementDeselected): Deleted.
        (WebInspector.NetworkTimelineView.prototype._treeElementSelected): Deleted.
        Removed tree element close button logic.

        * UserInterface/Views/RenderingFrameTimelineView.js: